src_old/objects/ProjectInvoice__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Invoices</relationshipLabel>
        <relationshipName>Project_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BillTo Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Invoices</relationshipLabel>
        <relationshipName>Project_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargeTotalAmount__c</fullName>
        <label>Charge Total Amount</label>
        <summarizedField>ProjectInvoiceLineItem__c.ChargeTotalAmount__c</summarizedField>
        <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CloneComment__c</fullName>
        <description>Reason code comment</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CloneReasonCode__c</fullName>
        <label>CloneReasonCode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failed to load in Lawson</fullName>
                </value>
                <value>
                    <fullName>Product Re-bill</fullName>
                </value>
                <value>
                    <fullName>Labor Re-bill</fullName>
                </value>
                <value>
                    <fullName>Wrong Client</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClonedFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From</label>
        <referenceTo>ProjectInvoice__c</referenceTo>
        <relationshipLabel>Project Invoices (Cloned From)</relationshipLabel>
        <relationshipName>ClonedFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit Applied</description>
        <inlineHelpText>Credit Applied</inlineHelpText>
        <label>Credit Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditTotalAmount__c</fullName>
        <label>Credit Total Amount</label>
        <summarizedField>ProjectInvoiceLineItem__c.CreditTotalAmount__c</summarizedField>
        <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalInvoiceNumber__c</fullName>
        <externalId>true</externalId>
        <label>External Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupedProjectInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grouped Project Invoice</label>
        <referenceTo>ProjectInvoice__c</referenceTo>
        <relationshipLabel>Project Invoices</relationshipLabel>
        <relationshipName>Project_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceBalance__c</fullName>
        <label>Invoice Balance</label>
        <summarizedField>ProjectInvoiceLineItem__c.TotalLineItemBalance__c</summarizedField>
        <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InvoiceContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Invoices (Invoice Contact)</relationshipLabel>
        <relationshipName>Project_Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsGroupedInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Grouped Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LawsonAccountAddressId__c</fullName>
        <formula>BillToContact__r.AccountAddressId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lawson Account Address Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LawsonAccountId__c</fullName>
        <formula>Account__r.CMKOneHubAccountID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lawson Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LawsonCompanyCode__c</fullName>
        <label>Lawson Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LawsonHeader1__c</fullName>
        <label>Lawson Header 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LawsonHeader2__c</fullName>
        <label>Lawson Header 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LawsonHeader3__c</fullName>
        <label>Lawson Header 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LawsonInvoiceType__c</fullName>
        <label>Lawson Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                    <default>true</default>
                    <label>IN</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LawsonPrefix__c</fullName>
        <label>Lawson Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LawsonProcessType__c</fullName>
        <label>Lawson Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                    <default>true</default>
                    <label>PB</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberofLineItems__c</fullName>
        <label>Number of Line Items</label>
        <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <label>PO #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTotalAmount__c</fullName>
        <label>Payment Total Amount</label>
        <summarizedField>ProjectInvoiceLineItem__c.PaymentTotalAmount__c</summarizedField>
        <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Account</label>
        <referenceTo>ProjectAccount__c</referenceTo>
        <relationshipLabel>Project Invoices</relationshipLabel>
        <relationshipName>Project_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <formula>Project__r.ProjectNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Invoices</relationshipLabel>
        <relationshipName>Project_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReservationDate__c</fullName>
        <formula>Project__r.Reservation__r.RequestedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResponsibleParty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Party</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Invoices (Responsible Party)</relationshipLabel>
        <relationshipName>Project_Invoices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalespersonEmployeeID__c</fullName>
        <formula>ProjectAccount__r.Opportunity__r.Owner.FirstName + &apos; &apos; + ProjectAccount__r.Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesperson Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Grouped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalInvoiceAmountCalculated__c</fullName>
        <description>Deprecated</description>
        <label>Deprecated Total Invoice Amount Cal</label>
        <summarizedField>ProjectInvoiceLineItem__c.AmountCalculated__c</summarizedField>
        <summaryFilterItems>
            <field>ProjectInvoiceLineItem__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalInvoiceAmount__c</fullName>
        <inlineHelpText>𝑻𝒐𝒕𝒂𝒍 𝑰𝒏𝒗𝒐𝒊𝒄𝒆= 𝑳𝒂𝒃𝒐𝒓+ 𝑷𝒓𝒐𝒅𝒖𝒄𝒕+ 𝑺𝒂𝒍𝒆𝒔 𝑻𝒂𝒙 −𝑷𝒓𝒆𝒑𝒂𝒚 𝑰𝒏𝒗𝒐𝒊𝒄𝒆</inlineHelpText>
        <label>Total Invoice Amount</label>
        <summarizedField>ProjectInvoiceLineItem__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ProjectInvoiceLineItem__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalProjectInvoiceAmountCalculated__c</fullName>
        <label>Total Invoice Amount Calculated</label>
        <summarizedField>ProjectInvoiceLineItem__c.TotalLineItemAmount__c</summarizedField>
        <summaryForeignKey>ProjectInvoiceLineItem__c.ProjectInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>PreBill</fullName>
                    <label>Pre Bill</label>
                </value>
                <value>
                    <fullName>PostExecution</fullName>
                    <label>Post Execution</label>
                </value>
                <value>
                    <fullName>Reconcile</fullName>
                </value>
                <value>
                    <fullName>Unreconciled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{000000000}</displayFormat>
        <label>Project Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>